# dify-airtable-plugin

./: PRIVACY.md  README.md  README_cn.md  manifest.yaml  pyproject.toml  requirements.txt
provider/: airtable.py  airtable.yaml
tools/: airtable_insert.py  airtable_insert.yaml  common.py
tools/all/: config.yaml  invoke.py
tools/insert/: config.yaml  invoke.py
